src/sass/abstracts/_mixin.scss
// used to add transform effect
@mixin transformEffect_hide($x, $y) {
  position: fixed;

  transform: translate($x, $y);
  opacity: 0;
  transition: transform 0.5s ease, opacity 0.15s linear 0.1s;
}
// used to add transform effect
@mixin transformEffect_show($x, $y) {
  transform: translate($x, $y);
  opacity: 1;
}

@mixin pageLayout() {
  padding: $page-padding;
}

@mixin tableView() {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
  gap: 10px;
  justify-content: space-evenly;
  align-items: center;
}

@mixin tableView_property() {
  display: flex;
  justify-content: space-between;
  align-items: center;
  text-align: center;
  label {
    color: $main-color;
    font-weight: bold;
    width: 30%;
  }
}
//used to add effect to the dropdowns default css
@mixin dropdown_hide {
  height: 0px;
  z-index: -1;
  overflow: hidden;
  opacity: 0;
  transition: height 0.5s ease, opacity 0.5s linear 0.1s, z-index 0.5s ease;
}
//used to add effect to the Dropdowns css when Dropdowns are opened
@mixin dropdown_show($z, $h) {
  z-index: $z;
  opacity: 1;
  height: #{$h};
}

@mixin tableWResponsive() {
  table {
    background-color: white;
    margin: 0 auto 0 auto;
    max-width: 1300px;
    min-width: 750px;
    padding: 20px;
    border-radius: 15px;
    th,
    td {
      &:nth-last-of-type(1),
      &:nth-last-of-type(2) {
        text-align: center;
      }
    }

    th {
      color: $main-color;
      text-align: center;

      > button {
        background-color: transparent;
        border: none;
        color: $main-color;
        display: flex;
        font-weight: bold;
        font-size: 0.93em;
        align-items: center;
        cursor: pointer;
        border-radius: 10px;
        background-image: linear-gradient(#f0f0f0, #eeeeee);
        background-position: 50% 50%;
        background-repeat: no-repeat;
        background-size: 0% 100%;
        transition: background-size 0.5s ease-out, color 0.5s ease-out;
        padding: 0px;
        justify-content: center;
        width: 100%;
        &:hover {
          background-size: 100% 100%;
        }
      }
    }
  }

  /*
	Max width before this PARTICULAR table gets nasty. This query will take effect for any screen smaller than 760px and also iPads specifically.
	*/
  @media only screen and (max-width: 760px),
    (min-device-width: 768px) and (max-device-width: 1024px) {
    /* Force table to not be like tables anymore */
    table,
    thead,
    tbody,
    th,
    td,
    tr {
      display: block;
      font-size: 13px;
    }
    table {
      min-width: auto;
    }

    /* Hide table headers (but not display: none;, for accessibility) */
    thead tr {
      position: absolute;
      top: -9999px;
      left: -9999px;
    }

    tr {
      margin: 0 0 1rem 0;
    }

    tr:nth-child(even) {
      background: #ccc;
      td {
        color: white;
      }
    }
    th {
      padding: 0px;
    }
    td {
      /* Behave  like a "row" */
      border: none;
      border-bottom: 1px solid #eee;
      position: relative;
      padding-left: 50% !important;
    }
    td:before {
      /* Now like a table header */
      position: absolute;
      /* Top/left values mimic padding */
      top: 0;
      left: 6px;
      width: 45%;
      padding-right: 10px;
      white-space: nowrap;
      color: $main-color;
    }
  }
}

